<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ContatoActivity">

    <ImageView
        android:id="@+id/image_Contato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/detalhe_contato">

    </ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/image_Contato"
        android:text="@string/text_Contato"
        android:textColor="#4db6ac"
        android:textSize="25sp">

    </TextView>

    <TextView
        android:id="@+id/text_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_Contato"
        android:layout_marginTop="20dp"
        android:text="@string/Email"
        android:textSize="18sp">

    </TextView>

    <TextView
        android:id="@+id/text_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_Email"
        android:layout_marginTop="40dp"
        android:text="@string/Telefone"
        android:textSize="18sp">

    </TextView>

    <TextView
        android:id="@+id/text_Celular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_telefone"
        android:layout_marginTop="10dp"
        android:text="@string/Celular"
        android:textSize="18sp">

    </TextView>

</RelativeLayout>