<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ServicosActivity">

    <ImageView
        android:id="@+id/image_Servicos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/detalhe_servico"></ImageView>

    <TextView
        android:id="@+id/text_Servicos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/image_Servicos"
        android:text="@string/text_Servicos"
        android:textColor="#00867d"
        android:textSize="25sp">

    </TextView>

    <TextView
        android:id="@+id/text_Consultoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_Servicos"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/image_Servicos"
        android:text="@string/text_Consultoria">

    </TextView>

    <TextView
        android:id="@+id/text_Processos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_Consultoria"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/image_Servicos"
        android:text="@string/text_Processos">

    </TextView>


</RelativeLayout>